feat: modernize and secure the PastureStack orchestration engine